--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,8 @@
 $bg-body: #ffffff;
 $amarillo: yellow;
+$parrafoindex: #0000f5;
+$parrafoComponentes: #7c007c;
+$parrafoNovedades: rgb(0, 64, 4);
+$parrafoQuienes: rgb(175, 224, 252);
+
+
