--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,7 +45,7 @@ body{
     .seccionIzquierda{
          grid-area: seccionIzquierda;
          article{
-            h3{
+            .titleindex{
               @include Estiloparrafo($parrafoindex, 30px);
 
             }
@@ -91,7 +91,7 @@ body{
     margin-bottom:20px;
 
    
-    p{
+    .parrIntroVideo{
       @include Estiloparrafo($parrafoNovedades, 20px);
     }
    
@@ -109,10 +109,10 @@ body{
       h2{
         text-align: center
       }
-      p{
-        @include Estiloparrafo($parrafoComponentes, 18px);
-
+      .pComponentes{
+        @include Estiloparrafo($parrafoComponentes, 20px);
       }
+      
       .img-componentes{
 
         text-align: center;
@@ -120,8 +120,8 @@ body{
           .img-componentes-jpg{
           
             border-style: double;
-            width: 500px;
-            height: 500px;
+            width: 400px;
+            height: 400px;
           }
         
       }
@@ -133,16 +133,31 @@ body{
 
   //inicio contacto
   .formulario{
-    width: 400px;
+    width: 350px;
     background-color: rgb(237, 237, 237);
     
+  }
+
+  .SelectorComponentes{
+    text-align: center;
+    height: 1px;
+  }
+
+  .AreaDeTexto{
+    width: 290px;
+  }
+
+  .cajaBotonEnviar{
+    text-align: center;
   }
   //fin contacto
 
   //inicio quienessomos.html
-  .parrafoNos{
-    @include Estiloparrafo($parrafoQuienes, 18px )
+ 
+  .sectionMapa{
+    background-color: rgb(250, 232, 202);
   }
+
   .mapa{
      
     width: 350px;
@@ -163,8 +178,8 @@ body{
    
        grid-template-areas:  
        "carrusel"
-       "seccionIzquierda"
-       "asideDerecha";
+       "asideDerecha"
+       "seccionIzquierda";
        grid-template-columns: auto;
        justify-items: center;
       
@@ -172,8 +187,8 @@ body{
  
    .img-componentes-jpg{
        border-style: double;
-       width: 300px;
-       height: 300px;
+       width: 200px;
+       height: 200px;
    }
  
    .mapa{
@@ -198,4 +213,22 @@ body{
       
    } 
  
+}
+
+@media screen and(max-width:769px) {
+     /*este grid solo aplica al html del index*/
+     .principal{
+  
+      display: grid;
+      padding: 10px;
+  
+      grid-template-areas:  
+      "carrusel"
+      "asideDerecha"
+      "seccionIzquierda";
+      grid-template-columns: auto;
+      justify-items: center;
+     
+  }
+  
 }
